--- a/styles/style.css
+++ b/styles/style.css
@@ -309,3 +309,31 @@
     margin-top: 5px;
     
 }
+
+/* sponsors section style */
+
+.sponsors{
+    width: 1170px;
+     margin-left: 90.5px;
+     margin-right: 90.5px;
+     margin-top: 100px;
+}
+.our-sponsors{
+    text-align: center;
+    margin-bottom: 40px;
+}
+.sponsor-heading{
+    font-size: 2.2rem;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+.sponsor-paragraph{
+    font-size: 1rem;
+    font-weight: 400;
+    
+}
+.sponsors-img{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    filter:grayscale(100%);
+}
