--- a/styles/style.css
+++ b/styles/style.css
@@ -264,6 +264,44 @@
     width: 100%;
 }
 
+/* responsive for different features section */
+@media screen and (max-width: 576px){
+.different-features {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
+    margin-top: 50px;
+    margin-left: 10px !important;
+    padding: 0 10px;
+}
+.card-and-title-container{
+    width: 100%;
+    height: auto;
+    
+}
+.feature-card{
+    width: 100%;
+    padding-bottom: 20px;
+}
+.different-features-img {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+  }
+ .architect-img {
+      width: 100%;
+      height: auto;
+      margin-top: 30px;
+  }
+.diffrent-features-btn{
+    margin-left: 0;
+}
+
+}
+
 /* facts section style */
 
 .facts{
@@ -310,10 +348,31 @@
     
 }
 
+/* Add responsiveness for fact section */
+
+@media screen and (max-width: 576px){
+.facts{
+     width: 450px;
+     margin-left: 10px;
+     margin-right: 10px;
+     margin-top: 50px;
+}
+.facts-container {
+    grid-template-columns: 1fr;
+    justify-content: center;
+  }
+.facts-heading,.fact-paragraph{
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    margin: 30px 10px;
+}
+}
+
 /* sponsors section style */
 
 .sponsors{
-    width: 1170px;
+     width: 1170px;
      margin-left: 90.5px;
      margin-right: 90.5px;
      margin-top: 100px;
@@ -336,6 +395,26 @@
     display: grid;
     grid-template-columns: repeat(5,1fr);
     filter:grayscale(100%);
+}
+
+/* Add responsiveness for sponsors section */
+
+@media screen and (max-width: 576px){
+    .sponsors{
+        width: 450px;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 50px;
+    }
+    .sponsors-img{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 40px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 0 auto;
+    }
 }
 
 /* Footer style */
