--- a/styles/style.css
+++ b/styles/style.css
@@ -352,7 +352,7 @@
 
 @media screen and (max-width: 576px){
 .facts{
-     width: 450px;
+     width: 100%;
      margin-left: 10px;
      margin-right: 10px;
      margin-top: 50px;
@@ -361,6 +361,10 @@
     grid-template-columns: 1fr;
     justify-content: center;
   }
+  .facts-card{
+    width: 80%;
+    margin: auto;
+}
 .facts-heading,.fact-paragraph{
     text-align: center;
     align-items: center;
@@ -393,15 +397,17 @@
 }
 .sponsors-img{
     display: grid;
+    justify-items: center;
     grid-template-columns: repeat(5,1fr);
     filter:grayscale(100%);
+    
 }
 
 /* Add responsiveness for sponsors section */
 
 @media screen and (max-width: 576px){
     .sponsors{
-        width: 450px;
+        width: 100%;
         margin-left: 10px;
         margin-right: 10px;
         margin-top: 50px;
@@ -410,10 +416,10 @@
         display: grid;
         grid-template-columns: 1fr;
         gap: 40px;
-        justify-content: center;
+        justify-items: center;
         align-items: center;
         text-align: center;
-        padding: 0 auto;
+        margin: 0 auto;
     }
 }
 
@@ -428,4 +434,17 @@
 }
 .footer-paragraph{
     padding: 30px 300px;
+}
+
+@media screen and (max-width: 576px){
+    .footer{
+    width: 100%;
+    height: 80px;
+    margin: 90px auto;
+    border-radius: 8px;
+    background: rgb(255, 244, 231);
+}
+.footer-paragraph{
+    padding: 30px ;
+}
 }
