--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 100%;           
+        /* width: 100%; */
         max-width: 100%;        
         margin: 0 auto;       
         padding: 20px;        
@@ -297,7 +297,14 @@
       margin-top: 30px;
   }
 .diffrent-features-btn{
-    margin-left: 0;
+    margin-left: -200px;
+    margin-top: -60px;
+    width: 50%;
+    height: 50%;
+}
+.experience-span{
+    font-size: 2.2rem;
+    font-weight: 600;
 }
 
 }
@@ -438,13 +445,14 @@
 
 @media screen and (max-width: 576px){
     .footer{
-    width: 100%;
+    width: 90%;
     height: 80px;
     margin: 90px auto;
     border-radius: 8px;
     background: rgb(255, 244, 231);
 }
 .footer-paragraph{
-    padding: 30px ;
+    padding: 20px ;
+    text-align: center;
 }
 }
